<resources>
    <string name="app_name">Club Paper Elephant</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="siteUrlHome" translatable="false">http://litclubbs.ru</string>
    <string name="siteUrlPublications" translatable="false">http://litclubbs.ru/articles</string>
    <string name="siteUrlBlog" translatable="false">http://litclubbs.ru/posts</string>
    <string name="siteUrlWriters" translatable="false">http://litclubbs.ru/writers</string>
    <string name="siteUrlJournal" translatable="false">http://litclubbs.ru/journal</string>
    <string name="siteUrlArtists" translatable="false">http://litclubbs.ru/painter</string>
    <string name="siteUrlPhoto" translatable="false">http://litclubbs.ru/albums</string>
    <string name="siteUrlHelp" translatable="false">http://litclubbs.ru/pages/vozmozhnosti.html</string>
    <string name="siteUrlAddPublication" translatable="false">http://litclubbs.ru/articles/add</string>
    <string name="siteUrlAddBlog" translatable="false">http://litclubbs.ru/posts/add</string>
    <string name="siteUrlAddPhoto" translatable="false">http://litclubbs.ru/albums/add</string>
    <string name="siteUrlAddNews" translatable="false">http://litclubbs.ru/news/add</string>

    <string name="settings">Settings</string>
    <string name="send_report">Send Report</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="publications">Publications</string>
    <string name="blog">Blog</string>
    <string name="writers">To writers</string>
    <string name="journal">Journal</string>
    <string name="artists">Artists</string>
    <string name="photo">Photo</string>
    <string name="help">Help</string>
    <string name="add">Add</string>

    <string name="mainText">There will be any text</string>
    <string name="logoLitClub">Literature club</string>
    <string name="logoText">Paper Elephant</string>
    <string name="tools">Tools</string>

    <string name="refreshStarted">Refreshing…</string>
    <string name="defaultErrorMessage">An error has occurred</string>
    <string name="documentDownloadFailed">Page download failed</string>
    <string name="unknownTypeOfTheLink">Sorry, this link can\'t be opened yet</string>
    <string name="settings_header_text">Please, sign in</string>
    <string name="settings_password_txt">Password</string>
    <string name="settings_sign_in_btn_txt">Sign in</string>
    <string name="settings_sign_up_btn_txt">Sign up</string>
    <string name="settings_password_hint">Pass</string>
</resources>
